# print-agent

./: .gitignore  README.md  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
src/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  config.rs  lib.rs  main.rs  poller.rs  printer.rs
ui/: index.html  main.js  styles.css
